# prototype-satysfi-language-server

./: Cargo.toml  README.md  memo.md
examples/: test.saty
src/: completion.rs  definition.rs  lib.rs  main.rs  parser.rs
src/parser/: relation.rs  satysfi.pest  tests.rs
src/resource/: completion.toml
