[package]
name = "maquette-satysfi-language-server"
version = "0.1.0"
authors = ["monaqa <mogassy@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
itertools = "0.10.0"
log = "0.4.13"
lsp-server = "0.5.0"
lsp-types = "0.86.0"
pest = "2.1.3"
pest_derive = "2.1.0"
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"
simplelog = "0.9.0"
structopt = "0.3.21"
toml = "0.5.8"
